# Learn_OpenGL

./: .gitignore  main.cpp
Hello_Triangle/: CMakeLists.txt  main.cpp
include/glad/: glad.h
src/: glad.c
